--- a/kubernetes-configs/content-api-service.yaml
+++ b/kubernetes-configs/content-api-service.yaml
@@ -1,12 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
   labels:
-    io.kompose.service: content-api
+    app: content-api
   name: content-api
 spec:
   ports:
@@ -14,6 +10,6 @@ spec:
       port: 8002
       targetPort: 80
   selector:
-    io.kompose.service: content-api
+    app: content-api
 status:
   loadBalancer: {}
