--- a/kubernetes-configs/db-persistentvolumeclaim.yaml
+++ b/kubernetes-configs/db-persistentvolumeclaim.yaml
@@ -1,9 +1,8 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
   labels:
-    io.kompose.service: db
+    app: db
   name: db
 spec:
   accessModes:
