--- a/kubernetes-configs/gateway-deployment.yaml
+++ b/kubernetes-configs/gateway-deployment.yaml
@@ -1,27 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
   labels:
-    io.kompose.service: gateway
+    app: gateway
   name: gateway
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: gateway
+      app: gateway
   strategy: {}
   template:
     metadata:
-      annotations:
-        kompose.cmd: kompose convert
-        kompose.version: 1.26.0 (40646f47)
-      creationTimestamp: null
       labels:
-        io.kompose.service: gateway
+        app: gateway
     spec:
       containers:
         - image: gateway
