--- a/kubernetes-configs/gateway-service.yaml
+++ b/kubernetes-configs/gateway-service.yaml
@@ -1,12 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
   labels:
-    io.kompose.service: gateway
+    app: gateway
   name: gateway
 spec:
   type: LoadBalancer 
@@ -16,6 +12,6 @@ spec:
       targetPort: 80
       nodePort: 30100
   selector:
-    io.kompose.service: gateway
+    app: gateway
 status:
   loadBalancer: {}
