--- a/kubernetes-configs/product-api-deployment.yaml
+++ b/kubernetes-configs/product-api-deployment.yaml
@@ -1,27 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.26.0 (40646f47)
-  creationTimestamp: null
   labels:
-    io.kompose.service: product-api
+    app: product-api
   name: product-api
 spec:
   replicas: 2
   selector:
     matchLabels:
-      io.kompose.service: product-api
+      app: product-api
   strategy: {}
   template:
     metadata:
-      annotations:
-        kompose.cmd: kompose convert
-        kompose.version: 1.26.0 (40646f47)
-      creationTimestamp: null
       labels:
-        io.kompose.service: product-api
+        app: product-api
     spec:
       containers:
         - image: product
